--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,10 +27,11 @@ jobs:
       run: ./gradlew build
 
     - name: Build debug APK
-      run: bash ./gradlew assembleDebug --stacktrace
+      run: ./gradlew assembleDebug --stacktrace
 
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
-        name: app
-        path: app/build/outputs/apk/debug
+        name: pokedex.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
+      
