--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,9 +29,17 @@ jobs:
     - name: Build debug APK
       run: ./gradlew assembleDebug --stacktrace
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+    - name: Set Now
+      run: |
+        echo "now=v$(date +'%Y.%m.%d.%H%M')" >> "$GITHUB_ENV"
+
+    - name: Create Release
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: $
       with:
-        name: pokedex.apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        tag_name: $
+        files: |
+          app/build/outputs/apk/debug/app-debug.apk
       
