--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,13 +1,13 @@
-name: Android CI
+name: Release APK
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    types: [closed]
+    branches: [main]
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true
 
     runs-on: ubuntu-latest
 
