--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,11 @@
 name: Deploy
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [main]
+  push:
+    branches: main
 
 jobs:
   build:
-    if: github.event.pull_request.merged == true
 
     runs-on: ubuntu-latest
 
@@ -16,21 +14,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 17
+    
+    - name: Setup JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Generate Keystore file from Github Secrets
+      run: |
+        echo "$" > ./keystore.b64
+        base64 -d -i ./keystore.b64 > ./${{ secrets.KEYFILE }}
+        cp ./$ ./app/$
 
-    - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Build debug APK
-      run: ./gradlew assembleDebug --stacktrace
+    - name: Build signed APK
+      run: |
+        bash ./gradlew assembleRelease \
+          -P android.injected.signing.store.file=${{ secrets.KEYFILE }} \
+          -P android.injected.signing.store.password=${{ secrets.STORE_PASSWORD }} \
+          -P android.injected.signing.key.alias=${{ secrets.KEY_ALIAS }}  \
+          -P android.injected.signing.key.password=${{ secrets.KEY_PASSWORD }} \
+          --stacktrace
 
     - name: Set timestamp
       run: |
@@ -44,5 +49,4 @@ jobs:
       with:
         tag_name: ${{ env.TIMESTAMP }}
         files: |
-          app/build/outputs/apk/debug/app-debug.apk
-      
+          app/build/outputs/apk/release/app-release.apk
