--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Generate Keystore file from Github Secrets
       run: |
-        echo "$" > ./keystore.b64
+        echo "${{ secrets.APP_KEYSTORE_BASE64 }}" > ./keystore.b64
         base64 -d -i ./keystore.b64 > ./${{ secrets.KEYFILE }}
         cp ./$ ./app/$
 
