--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         echo "${{ secrets.APP_KEYSTORE_BASE64 }}" > ./keystore.b64
         base64 -d -i ./keystore.b64 > ./${{ secrets.KEYFILE }}
-        cp ./$ ./app/$
+        cp ./${{ secrets.KEYFILE }} ./app/${{ secrets.KEYFILE }}
 
     - name: Build signed APK
       run: |
