--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.0-alpha04"
+agp = "8.4.0-alpha07"
 kotlin = "1.9.22"
 coreKtx = "1.12.0"
 junit = "4.13.2"
@@ -8,7 +8,7 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2023.10.01"
-
+material3 = "1.2.0-rc01"
 palette = "1.0.0"
 navigation = "2.7.6"
 room = "2.6.1"
@@ -16,7 +16,7 @@ paging = "3.2.1"
 
 googleDevtoolsKsp = "1.9.22-1.0.17"
 
-systemuicontroller = "0.32.0"
+systemuicontroller = "0.34.0"
 
 daggerHilt = "2.50"
 hiltNavigation = "1.1.0"
@@ -42,7 +42,7 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3"}
 androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
 
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation"}
