--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.0-alpha07"
+agp = "8.4.0-alpha09"
 kotlin = "1.9.22"
 coreKtx = "1.12.0"
 junit = "4.13.2"
@@ -7,10 +7,10 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.01.00"
-material3 = "1.2.0-rc01"
+composeBom = "2024.02.00"
+material3 = "1.2.0"
 palette = "1.0.0"
-navigation = "2.7.6"
+navigation = "2.7.7"
 room = "2.6.1"
 paging = "3.2.1"
 
